created exercises as practice

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./Javascript/app11.js"></script>
     <script src="./Javascript/app12.js"></script>
     <script src="./Javascript/app13.js"></script>
+    <script src="./Javascript/app14.js"></script>
         
 </body>
 </html>
