exercises with if and if else

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="./Javascript/app12.js"></script>
     <script src="./Javascript/app13.js"></script>
     <script src="./Javascript/app14.js"></script>
+    <script src="./Javascript/app16.js"></script>
+    <script src="./Javascript/app17.js"></script>
         
 </body>
 </html>
