--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <script src="./Javascript/app14.js"></script>
     <script src="./Javascript/app16.js"></script>
     <script src="./Javascript/app17.js"></script>
-        
+    <script src="./Javascript/app18.js"></script>
+    <script src="./Javascript/app19.js"></script>
+    <script src="./Javascript/app20.js"></script>
+    <script src="./Javascript/app21.js"></script>
+    <script src="./Javascript/app22.js"></script>
 </body>
 </html>
