Examples of cicles and loops (for, while, chile do, etc)

--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
     <script src="./Javascript/app20.js"></script>
     <script src="./Javascript/app21.js"></script>
     <script src="./Javascript/app22.js"></script>
+    <script rsc="./Javascript/app23.js"></script>
+    <script src="./Javascript/app24.js"></script>
+    <script src="./Javascript/app25.js"></script>
+    <script src="./Javascript/app26.js"></script>
+    <script src="./Javascript/app27.js"></script>
 </body>
 </html>
